[project]
name = "acis"
version = "1.0.0"
description = "Autonomous AI Cost Intelligence System - The Stripe for AI Usage Optimization"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "anthropic>=0.37.0",
    "google-generativeai>=0.8.0",
    "asyncpg>=0.30.0",
    "redis>=5.1.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27"]
